--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             </ul>
           </div>
         </nav>
-        <div class="content" style="color: aliceblue; text-align: center; font-family: Poppins; padding-left: 10%; margin-top: 100px;">👋 Hello, I'm Noobstain!<br><br><div style="text-align: left;">
+        <div class="content cc" style="color: aliceblue; text-align: center; font-family: Poppins;  margin-top: 10em; ">👋 Hello, I'm sumeet a.k.a Noobstain!<br><br><div style="text-align: justify; padding-left: 10%; padding-right: 10%;">
 
             🔒 As a passionate security student, I dive deep into the world of cybersecurity, armed with knowledge in API testing, web testing, <br>source code review, 
             Python, C++, MySQL, and more. 🚀
@@ -49,7 +49,7 @@
             🔐 My journey involves unraveling the intricacies of securing digital landscapes, understanding the nuances of API interactions,<br>
              and ensuring robust web applications. 💻
             
-            <br><br>🌐 Beyond the theoretical realm, I actively engage in hands-on challenges, participating in Capture The Flag (CTF) competitions. <br>These competitions allow me to apply my skills in real-world scenarios, keeping me sharp and up-to-date with the ever-evolving<br> landscape of cybersecurity.</div></div>
+            <br><br>🌐 Beyond the theoretical realm, I actively engage in hands-on challenges, participating in Capture The Flag (CTF) competitions. <br>These competitions allow me to apply my skills in real-world scenarios, keeping me sharp and up-to-date with the ever-evolving landscape of cybersecurity.<br><br><br>Certs:<br>- ISC2 CC<br>- NSE 3 Network Security Associate</div></div>
        </div>      
     
 </body>
