--- a/blogs.html
+++ b/blogs.html
@@ -41,7 +41,7 @@
             </ul>
           </div>
         </nav>
-        <div class="content" style="font-size: xx-large;">Depends on my mood</div>
+        <div class="content" style="font-size: xx-large;">Comming Soon</div>
     </div>
     
    
