--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
   </nav>
 
   <div class="content">
+    <h2>Hi there, 👋</h2>
     <h1 class="fnt">Sumeet Darekar</h1>
     <p class="fnt">Security student | Python programmer</p>
     <ul class="socials">
