--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
           <button class="btn btn-color-1" onclick="location.href='#contact'">
             Contact Info
           </button>
+          <button class="btn btn-color-1" onclick="location.href='https://noobstain.gitbook.io/graphql/'">
+            graphql security gitbook
+          </button>
         </div>
         <div id="socials-container">
           <img
