--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             Contact Info
           </button>
           <button class="btn btn-color-1" onclick="location.href='https://noobstain.gitbook.io/graphql/'">
-            graphql security gitbook
+            gitbook
           </button>
         </div>
         <div id="socials-container">
