--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
           <button class="btn btn-color-2" onclick="location.href='https://noobstain.gitbook.io/graphql/'">
             gitbook
           </button>
+          <button class="btn btn-color-1" onclick="location.href='https://noobstain.medium.com/'">
+            Medium Blogs
+          </button>
         </div>
         <div id="socials-container">
           <img
