--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             gitbook
           </button>
           <button class="btn btn-color-1" onclick="location.href='https://noobstain.medium.com/'">
-            Medium Blogs
+            Blogs
           </button>
         </div>
         <div id="socials-container">
