--- a/redirect.html
+++ b/redirect.html
@@ -6,7 +6,7 @@
   <title>Redirect Example</title>
   <script>
     // Redirect to a new page when the page loads
-    window.location.href = 'http://169.254.169.254/latest/meta-data/iam/security-credentials/aws-elasticbeanorastalk-ec2-role';
+    window.location.href = 'http://169.254.169.254/latest/meta-data/';
   </script>
 </head>
 <body>
