--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
           >
             Resume
           </button>
-          <button class="btn btn-color-1" onclick="location.href='#contact'">
-            Contact Info
-          </button>
+          
           <button class="btn btn-color-2" onclick="location.href='https://noobstain.gitbook.io/graphql/'">
             gitbook
           </button>
@@ -351,16 +349,15 @@
       />
     </section>
     <section id="contact">
-      <p class="section__text__p1">Now that you have great power, use it wisely 😅 !</p>
-      <h1 class="title">Ping me</h1>
+      <h1 class="title" style="font-size: 5rem;">Ping me</h1>
       <div class="contact-info-upper-container">
-        <div class="contact-info-container">
+        <div class="contact-info-container" >
           <img
             src="./assets/email.png"
             alt="Email icon"
             class="icon contact-icon email-icon"
           />
-          <p><a href="mailto:sumeetdarekar2003@gmail.com">sumeetdarekar2003@gmail.com</a></p>
+          <p style="font-size: 1.2rem;"><a href="mailto:sumeetdarekar2003@gmail.com">sumeetdarekar2003@gmail.com</a></p>
         </div>
         <div class="contact-info-container">
           <img
@@ -368,7 +365,7 @@
             alt="LinkedIn icon"
             class="icon contact-icon"
           />
-          <p><a href="https://www.linkedin.com/in/sumeet-darekar-07569a1b4/" target="blank">LinkedIn</a></p>
+          <p style="font-size: 2rem;"><a href="https://www.linkedin.com/in/sumeet-darekar-07569a1b4/" target="blank">LinkedIn</a></p>
         </div>
       </div>
     </section>
