--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <script src="https://cdn-in.pagesense.io/js/cyyc2zw4/a36457f203db42c9aba7de2efd412c92.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Pinterest API Access Policy</title>
   <style>
@@ -252,3 +253,4 @@
   </footer>
 </body>
 </html>
+
