--- a/simp.html
+++ b/simp.html
@@ -1,24 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CTF Image Loader</title>
-</head>
-<body>
-    <h1>CTF Challenge: Image Bounty</h1>
-    <p>Loading the bounty image...</p>
-    <img id="bounty-img" src="./image.png" alt="Starbucks Bounty Logo" onload="alert(1)" onerror="console.error('Image load failed');">
-    
-    <script>
-        // Additional CTF-friendly script if needed
-        document.addEventListener('DOMContentLoaded', function() {
-            const img = document.getElementById('bounty-img');
-            if (img.complete && img.naturalWidth > 0) {
-                // Image loaded successfully
-                console.log('Image rendered successfully for CTF!');
-            }
-        });
-    </script>
-</body>
+‰PNG␍␊␚␊
+<html>
+    <script>alert()</script>
 </html>
